<resources>
    <string name="app_name">Test</string>
    <string name="btn_okhttp_mainActivity">okhttp</string>
    //进入到okhttp主界面的按钮
    <string name="btn_retrofit_mainActivity">retrofit</string>
    //进入到retrofit主界面的按钮
    <string name="btn_rxJava_mainActivity">RxJava</string>
    //进入到RxJava主界面的按钮
    <string name="btn_rxAndroid_mainActivity">RxAndroid</string>
    //进入到RxAndroid主界面的按钮
    <string name="btn_eventBus_mainActivity">EventBus</string>
    //进入到EventBus主界面的按钮
    <string name="btn_bgaBanner_mainActivity">BGABanner</string>
    //进入到BGABanner主界面的按钮
    <string name="btn_flycoTablayout_mainActivity">FlycoTabLayout</string>
    //进入到FlycoTabLayout主界面的按钮
    <string name="btn_baseRecyclerViewAdapterHelper_mainActivity">BaseRecyclerViewAdapterHelper</string>
    //进入到BaseRecyclerViewAdapterHelper主界面的按钮
    <string name="btn_ultraPullToRefresh_mainActivity">UltraPullToRefresh</string>
    //进入到UltraPullToRefresh主界面的按钮

    <string name="btn_nextPage_EventBusMainActivity">Next Page</string>
    <string name="tv_content_EventBusMainActivity">这里显示下一个页面传递回来的值</string>
    <string name="btn_send_EventBus2Activity">发送下面文本的内容到第一个节目</string>
    <string name="tv_content_EventBus2Activity">这是eventBus第二个页面传递给第一个页面的内容</string>

    <string name="btn_guideEnter_BgaBannerMainActivity">进入主界面</string>

    <string name="btn_get_OkhttpMainActivity">GET</string>
    <string name="btn_post_OkhttpMainActivity">POST</string>
    <string name="btn_send_RxJavaMainActivity">SEND</string>
    <string name="btn_send_RxAndroidMainActivity">SEND</string>

</resources>
