<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.utsoft.cc.test.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_okhttp_mainActivity"
        android:text="@string/btn_okhttp_mainActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_retrofit_mainActivity"
        android:text="@string/btn_retrofit_mainActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_rxJava_mainActivity"
        android:text="@string/btn_rxJava_mainActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_rxAndroid_mainActivity"
        android:text="@string/btn_rxAndroid_mainActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_eventBus_mainActivity"
        android:text="@string/btn_eventBus_mainActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_bgaBanner_mainActivity"
        android:text="@string/btn_bgaBanner_mainActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_flycoTabLayout_mainActivity"
        android:text="@string/btn_flycoTablayout_mainActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_baseRecyclerViewAdapterHelper_mainActivity"
        android:text="@string/btn_baseRecyclerViewAdapterHelper_mainActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btn_ultraPullToRefresh_mainActivity"
        android:text="@string/btn_ultraPullToRefresh_mainActivity"
        />

    </LinearLayout>
    </ScrollView>
</LinearLayout>
